--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -170,6 +170,7 @@ body.skey {
             margin: 0 0 15px 0;
         }
         #results-display {
+            margin-bottom: 8px;
             label {
                 color: #000;
                 font-family: $headings-font;
